; ModuleID = '/home/carl/AnghaBench/git/extr_revision.c_rev_same_tree_as_empty.c'
source_filename = "/home/carl/AnghaBench/git/extr_revision.c_rev_same_tree_as_empty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rev_info = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }
%struct.commit = type { i32 }
%struct.tree = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@REV_TREE_SAME = common dso_local global i64 0, align 8
@tree_difference = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rev_info*, %struct.commit*)* @rev_same_tree_as_empty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rev_same_tree_as_empty(%struct.rev_info* %0, %struct.commit* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.rev_info*, align 8
  %5 = alloca %struct.commit*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.tree*, align 8
  store %struct.rev_info* %0, %struct.rev_info** %4, align 8
  store %struct.commit* %1, %struct.commit** %5, align 8
  %8 = load %struct.commit*, %struct.commit** %5, align 8
  %9 = call %struct.tree* @get_commit_tree(%struct.commit* %8)
  store %struct.tree* %9, %struct.tree** %7, align 8
  %10 = load %struct.tree*, %struct.tree** %7, align 8
  %11 = icmp ne %struct.tree* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %34

13:                                               ; preds = %2
  %14 = load i64, i64* @REV_TREE_SAME, align 8
  store i64 %14, i64* @tree_difference, align 8
  %15 = load %struct.rev_info*, %struct.rev_info** %4, align 8
  %16 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  store i64 0, i64* %18, align 8
  %19 = load %struct.tree*, %struct.tree** %7, align 8
  %20 = getelementptr inbounds %struct.tree, %struct.tree* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load %struct.rev_info*, %struct.rev_info** %4, align 8
  %23 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %22, i32 0, i32 0
  %24 = call i32 @diff_tree_oid(i32* null, i32* %21, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), %struct.TYPE_6__* %23)
  store i32 %24, i32* %6, align 4
  %25 = load i32, i32* %6, align 4
  %26 = icmp sge i32 %25, 0
  br i1 %26, label %27, label %31

27:                                               ; preds = %13
  %28 = load i64, i64* @tree_difference, align 8
  %29 = load i64, i64* @REV_TREE_SAME, align 8
  %30 = icmp eq i64 %28, %29
  br label %31

31:                                               ; preds = %27, %13
  %32 = phi i1 [ false, %13 ], [ %30, %27 ]
  %33 = zext i1 %32 to i32
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %31, %12
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local %struct.tree* @get_commit_tree(%struct.commit*) #1

declare dso_local i32 @diff_tree_oid(i32*, i32*, i8*, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
